smm finalizando detalhes de parametros
